--- a/public/css/style.css
+++ b/public/css/style.css
@@ -882,3 +882,39 @@ a#filters_col_bt.collapsed:before {
 .ranking-title {
   font-size: 24px;
 }
+.sub-category {
+  position: relative;
+  padding: 1rem .5rem;
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
+.sub-category:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  content: '';
+  background-image: -webkit-gradient(linear, left top, right top, from(#fa709a), to(#fee140));
+  background-image: -webkit-linear-gradient(left, #fa709a 0%, #fee140 100%);
+  background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
+}
+
+.rank-category {
+  position: relative;
+  padding: 1rem .5rem;
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
+.rank-category:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  content: '';
+  background-image: -webkit-linear-gradient(315deg, #704308 0%, #ffce08 40%, #e1ce08 60%, #704308 100%);
+  background-image: linear-gradient(135deg, #704308 0%, #ffce08 40%, #e1ce08 60%, #704308 100%);
+}
